Correction de l'alignement du texte

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,10 +316,7 @@ header h1 {
   transform: scale(1.05);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
-form:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-}
+
 .presentation .flex {
   flex-direction: row;
   flex-wrap: nowrap;
